--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@ body{
     font-weight: 700;
     letter-spacing: 0.2rem;
     background: rgba(0,0,0,0.6) !important;
-    padding:20px 0;
+    padding:10px 0;
+    position: fixed;
 }
 
 .navbar-dark .navbar-nav .nav-link{
